fix: 🐛 solve pixel perfect overflow in map

--- a/styles.css
+++ b/styles.css
@@ -423,7 +423,7 @@ footer a:visited {
 .contenedorMapa {
   margin: auto;
 
-  max-width: 95%;
+  max-width: 95.1%;
 }
 
 .borde {
